--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="fIcons">
                        <a href="https://www.facebook.com/"> <img src="facebook.png" alt="" class="fIcon"> </a>
                     <img src="twitter.png" alt="" class="fIcon">
+                    <blockquote class="twitter-tweet" data-dnt="true" align="center"><p lang="en" dir="ltr">It&#39;s pretty awesome how dancing makes robots less intimidating. Looking forward to seeing more nontrivial Machine Learning on these robots. Credit: Boston Dynamics. <a href="https://t.co/wnB2i9qhdQ">pic.twitter.com/wnB2i9qhdQ</a></p>&mdash; Reza Zadeh (@Reza_Zadeh) <a href="https://twitter.com/Reza_Zadeh/status/1344009123004747778?ref_src=twsrc%5Etfw">December 29, 2020</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     <img src="instagram.png" alt="" class="fIcon">
                     <img src="whatsapp.png" alt="" class="fIcon">
                 </div>
