--- a/index.html
+++ b/index.html
@@ -246,24 +246,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h1 class="fMenuTitle">Follow Us</h1>
                 <div class="fIcons">
 
-                    <!-- Load Facebook SDK for JavaScript -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-var js, fjs = d.getElementsByTagName(s)[0];
-if (d.getElementById(id)) return;
-js = d.createElement(s); js.id = id;
-js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
-fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-     <!-- Your share button code -->
-<div class="fb-share-button" 
-data-href="https://www.your-domain.com/your-page.html" 
-data-layout="button_count">
-</div>
-
-</body>
-</html>              
+                  <a href="https://www.facebook.com/"> <img src="facebook.png" alt="" class="fIcon"> </a>
 
 
 
