--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=TAG_ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GTM-KWT6KFS8"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'TAG_ID');
+        gtag('config', 'GTM-KWT6KFS8');
     </script>
 </head>
 <body>
