--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </head>
 <body>
 
-   <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -84,13 +84,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </head>
 <body>
     <h1>Welcome to Our Website!</h1>
+    <!-- Button to redirect to the select-product.html page -->
     <button onclick="window.location.href='select-product.html'">Limited Offer</button>
 </body>
 </html>
 
 
 
-<body>
+
+
 
   
 </body>
