--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <body>
     <h1>Welcome to Our Website!</h1>
     <!-- Button to redirect to the select-product.html page -->
-    <button onclick="window.location.href='select-product.html'">Limited Offer</button>
+ <button onclick="window.location.href='pages/select-product.html'">Limited Offer</button>
+
 </body>
 </html>
 
