--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <body>
     <h1>Welcome to Our Website!</h1>
     <!-- Button to redirect to the select-product.html page -->
- <button onclick="window.location.href='pages/select-product.html'">Limited Offer</button>
+ <button onclick="window.location.href='https://github.com/gunavathiramasamy/Web_Demo_App_2024/blob/main/select-product.htm'">Limited Offer</button>
 
 </body>
 </html>
