--- a/select-product.htm
+++ b/select-product.htm
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Select a Product</h2>
-    <form action="thank-you.html" method="GET">
+    <form action="thank-you.htm" method="GET">
         <label for="product">Choose your product:</label>
         <select id="product" name="product">
             <option value="product1">Product 1</option>
