--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E03VQKB8PX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-33XZ15DKHM"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-E03VQKB8PX');
+    gtag('config', 'G-33XZ15DKHM');
     </script>
 
     <meta charset="UTF-8">
