--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       *   sent when the user performs some action.
       */
       gtag('event', 'screen_view', {
-        'app_name': 'myAppName',
+        'app_name': 'MyDemoView',
         'screen_name': 'Home'
       });
     </script> 
