--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         'app_name': 'MyDemoView',
         'screen_name': 'Home'
       });
-         gtag('config', 'G-33XZ15DKHM', {
+         gtag('event', 'screen_view', {
+             'app_name':'User_ID',
+             ('config', 'G-33XZ15DKHM', {
   'user_id': 'USER_ID'
 });
     </script> 
