--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 </html>
 
-
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push({
+  'event': 'Limited Offer'
+});
 
 
 
