--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </html>
 
 
+<!--
+  Note: In the following code sample, make sure to
+  replace "TAG_ID" with your tag ID.
+  Learn more: https://support.google.com/tagmanager/answer/12326985
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -425,37 +430,40 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-33XZ15DKHM',{ 'debug_mode': true });
+        gtag('config', 'G-33XZ15DKHM');
     </script>
 </head>
 <body>
-    <div>This is where the purchase form would go</div>
-    <button id="view_item_list">view_item_list</button>
+    <div>Order your items here</div>
+    <button> View Items</button>
     <script>
-document.getElementById("view_item_list").addEventListener("click", function () {               
   gtag("event", "view_item_list", {
   item_list_id: "related_products",
   item_list_name: "Related products",
   items: [
-    {
-      item_id: "SKU_12345",
-      item_name: "Stan and Friends Tee",
-      affiliation: "Google Merchandise Store",
-      coupon: "SUMMER_FUN",
-      discount: 2.22,
-      index: 0,
-      item_brand: "Google",
-      item_category: "Apparel",
-      item_category2: "Adult",
-      item_category3: "Shirts",
-      item_category4: "Crew",
-      item_category5: "Short sleeve",
-      item_list_id: "related_products",
-      item_list_name: "Related Products",
-      item_variant: "green",
-      location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
-      price: 10.01,
-      quantity: 3
-    }
-  ]
-});          
+        // If someone purchases more than one item,
+        // you can add those items to the items array
+         {
+          item_id: "SKU_12345",
+          item_name: "Stan and Friends Tee",
+          affiliation: "Google Merchandise Store",
+          coupon: "SUMMER_FUN",
+          discount: 2.22,
+          index: 0,
+          item_brand: "Google",
+          item_category: "Apparel",
+          item_category2: "Adult",
+          item_category3: "Shirts",
+          item_category4: "Crew",
+          item_category5: "Short sleeve",
+          item_list_id: "related_products",
+          item_list_name: "Related Products",
+          item_variant: "green",
+          location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
+          price: 10.01,
+          quantity: 3
+        }]
+    });
+    </script>
+</body>
+</html>
