--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
 </head>
 <body>
-    <div>This is where the purchase form would go</div>
+    <div>Click here to trigger Purchase button for custom event</div>
     <button id="purchase">Purchase</button>
     <script>
     document.getElementById("purchase").addEventListener("click", function () {
@@ -405,7 +405,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@Dr. Dalwin . All rights reserved. 2022.</span>
+                <span class="copyright">@Dr.R. Gunavathi . All rights reserved. 2024.</span>
             </div>
         </div>
     </footer>
